# creditcardfrauddetection

./: CHANGELOG.md  LICENSE  Makefile  README.md  data.dvc  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
creditcardfrauddetection/: __init__.py  dataset.py  features.py  plots.py
creditcardfrauddetection/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
mlruns/.trash/727218995700990567/: meta.yaml
mlruns/0/: meta.yaml
mlruns/156458501829876158/: meta.yaml
mlruns/156458501829876158/02604c2d20294c1392aad874beda802e/: meta.yaml
mlruns/156458501829876158/08b4543fde5943d8bd8168e7a028645d/: meta.yaml
mlruns/156458501829876158/1410118d153a47eeb2a42178477510a2/: meta.yaml
mlruns/156458501829876158/39a649308c7a431dab86496b11765006/: meta.yaml
mlruns/156458501829876158/4ec521b2f359404ba212330abec7f516/: meta.yaml
mlruns/156458501829876158/4f099d2e187e4095b9df204485c1acf6/: meta.yaml
mlruns/156458501829876158/52c1c1504d0044fca27f43379335c1d3/: meta.yaml
mlruns/156458501829876158/6d9587bb363a4ec8a458b04b3c071ea2/: meta.yaml
mlruns/156458501829876158/6f76d95729d345bb82f6da18ec3df70c/: meta.yaml
mlruns/156458501829876158/7dcb4d68d8014dc7bc3bc8e7a02c65d7/: meta.yaml
mlruns/156458501829876158/90cebaa1b09941f7afb5117811c7cb26/: meta.yaml
mlruns/156458501829876158/95eb4f0db56944268aaad581a74213a8/: meta.yaml
mlruns/models/fraud_detection_model/: meta.yaml
src/: dataset.py
src/config/: __init__.py
src/constants/: __init__.py
src/logger/: __init__.py
src/modeling/: predict.py  train.py
src/utils/: __init__.py
(+118 files in other folders)
